[tool.poetry]
name = "my-api"
version = "0.1.0"
description = ""
authors = ["Grenui92 <grenui92@gmail.com>"]
readme = "README.md"
packages = [{include = "my_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.5.post1"
requests = "^2.28.2"
python-multipart = "^0.0.6"
alembic = "^1.10.2"
pydantic = {extras = ["email"], version = "^1.10.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
